<resources>
    <string name="app_name">PetrolPatrol</string>

    <string name="not_applicable">N/A</string>

    <!-- List Content -->
    <string name="item_list_distance">%1$.2f km</string>

    <!-- Search Bar -->
    <string name="menu_search_">Search</string>
    <string name="search_hint">Suburb or Postcode</string>
    <string name="search_invalid">Search returned nothing, please check that your query is correct</string>

    <!-- Filter Toolbar Menu Items -->
    <string name="menu_fueltype">Fueltype</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_price">Price</string>
    <string name="menu_sort_distance">Distance</string>

    <!-- Menu FuelType Submenu Items -->

    <string name="fueltype_E10">E10</string>
    <string name="fueltype_U91">U91</string>
    <string name="fueltype_E85">E85</string>
    <string name="fueltype_P95">P95</string>
    <string name="fueltype_P98">P98</string>
    <string name="fueltype_DL">DL</string>
    <string name="fueltype_PDL">PDL</string>
    <string name="fueltype_B20">B20</string>
    <string name="fueltype_LPG">LPG</string>
    <string name="fueltype_CNG">CNG</string>
    <string name="fueltype_LNG">LNG</string>
    <string name="fueltype_EV">EV</string>
    <string name="fueltype_H2">H2</string>

    <string name="title_home_average_price">Current Average Price</string>

    <string name="title_home_price_history">Price History</string>

    <string name="title_home_favourites">Favourites</string>

    <string name="Message_home_no_favourites">You have no favourited any stations yet! Favourited stations will appear
        here
    </string>

    <!-- Maps Toolbar Menu Items -->

    <string name="menu_list">Display in list view</string>

    <!-- Details Toolbar Menu Items -->

    <string name="menu_favourite">Add to favourites</string>

    <!-- Details Item Content -->
    <string name="item_details_lastupdated">Last Updated: %1$s</string>
    <string name="item_details_icon_brand_content_description">brand logo</string>

    <!-- Navigation Drawer Menu Items -->

    <string name="nav_settings">Settings</string>

    <!-- Volley Error Messages -->
    <string name="error_network_timeout">There is a problem with the internet connection</string>
    <string name="error_auth_failure">error auth failure</string>
    <string name="error_server">error server</string>
    <string name="error_network">error network</string>
    <string name="error_parse">error parse</string>

    <!-- Chart -->
    <string name="chart_no_data">Chart loading</string>
    <string name="title_activity_maps">Map</string>

    <!-- Toast Messages -->
    <string name="location_permission_denied">Permission denied, location features not enabled</string>
    <string name="title_activity_home1">Home1Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
