<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@id/search"
            app:showAsAction="always"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/menu_search">
    </item>

    <item
            android:id="@id/fueltype"
            app:showAsAction="always"
            android:icon="@drawable/ic_local_gas_station_white_24dp"
            android:title="@string/menu_fueltype">

        <menu><!-- include: submenu_fueltypes.xml --></menu>
    </item>

    <item
            android:id="@id/sort"
            app:showAsAction="always"
            android:icon="@drawable/ic_sort_white_24dp"
            android:title="@string/menu_sort">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@id/sort_price"
                        android:checked="false"
                        android:icon="@drawable/ic_attach_money_black_24dp"
                        android:title="@string/menu_sort_price">
                </item>
                <item
                        android:id="@id/sort_distance"
                        android:checked="false"
                        android:icon="@drawable/ic_directions_black_24dp"
                        android:title="@string/menu_sort_distance">
                </item>
            </group>
        </menu>
    </item>
</menu>